# self-dual-PotBKZ

./: .gitignore  CMakeLists.txt  Main.py  Main.sh  Make.sh  Makefile  README.md  SDPB.cpp  SDPB.hpp  dual_potential_graph.csv  example.py  potential_graph.csv  potential_graph_DualENUM_and_PrimalLLL.csv  profile.txt  test.py  tour_data.csv
.data/: dual_potential_graph.csv  potential_graph_DualENUM_and_PrimalLLL.csv  potential_of_BKZ.csv  potential_of_DualPotBKZ.csv  potential_of_PotBKZ.csv  potential_of_SelfDualPotBKZ.csv
include/: Lattice.h  SDPotBKZ.h  tools.h
presentation/: 100_compare_potential.eps  latexmkrc  main.tex  ref.bib
src/: BKZ.cpp  BKZ.h  DualPotBKZ.cpp  DualPotBKZ.h  DualPotENUM.cpp  DualPotENUM.h  DualPotLLL.cpp  DualPotLLL.h  ENUM.cpp  GSO.cpp  Insert.cpp  Lattice.cpp  Lattice.h  PotBKZ.cpp  PotBKZ.h  PotENUM.cpp  PotENUM.h  PotLLL.cpp  PotLLL.h  SDPB.cpp  SDPB.hpp  SDPotBKZ.cpp  SelfDualPotBKZ.cpp  SelfDualPotBKZ.h  generator.cpp
svp_challenge_list/: SVP-100-0.svp  SVP-100-1.svp  SVP-100-2.svp  SVP-100-3.svp  SVP-100-4.svp  SVP-100-5.svp  SVP-100-6.svp  SVP-100-7.svp  SVP-100-8.svp  SVP-100-9.svp  SVP-110-0.svp  SVP-110-1.svp  SVP-110-2.svp  SVP-110-3.svp  SVP-110-4.svp  SVP-110-5.svp  SVP-110-6.svp  SVP-110-7.svp  SVP-110-8.svp  SVP-110-9.svp  SVP-120-0.svp  SVP-120-1.svp  SVP-120-2.svp  SVP-120-3.svp  SVP-120-4.svp  SVP-120-5.svp  SVP-120-6.svp  SVP-120-7.svp  SVP-120-8.svp  SVP-120-9.svp  SVP-130-0.svp  SVP-130-1.svp  SVP-130-2.svp  SVP-130-3.svp  SVP-130-4.svp  SVP-130-5.svp  SVP-130-6.svp  SVP-130-7.svp  SVP-130-8.svp  SVP-130-9.svp  (+113 more)
